--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,17 @@ on:
         #   - tools/**
         #   - xmake.lua
 
-permissions:
-    contents: read
-
 jobs:
     make-release:
-        runs-on: ubuntu-22.04
+        runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            packages: write
+            # This is used to complete the identity challenge
+            # with sigstore/fulcio when running outside of PRs.
+            id-token: write
         steps:
-            - name: Checkout
+            - name: Checkout repository
               uses: actions/checkout@v4
 
             - uses: goto-bus-stop/setup-zig@v2
