--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
               run: |
                   sudo apt-get update
                   sudo apt-get install -y nim build-essential gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc-dev-arm64-cross ccache
+                  sudo ls -al /home/runner/work/RE-UE4SS/RE-UE4SS/tools/zig/
 
             - name: Setup xmake
               uses: xmake-io/github-action-setup-xmake@v1
