--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,8 @@ jobs:
             - name: Build
               run: |
                   xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross
-                  XMAKE_COLORTERM=nocolor xmake build -v -D > build.log
+                  echo "Clean build done.. next building..."
+                  xmake build -v -D
             - name: Stripping
               run: |
                   mkdir prepackage
