--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
             - uses: goto-bus-stop/setup-zig@v2
               with:
                   version: 0.13.0 # released versions or master
-            - run: zig --verbose
+            - run: zig --version
 
             - name: Change chmod for zig
               run: |
