--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,7 @@ jobs:
 
             - uses: goto-bus-stop/setup-zig@v2
               with:
-                  version: 0.13.0 # released versions or master
-            - run: zig --version
+                  version: 0.13.0
 
             - name: Change chmod for zig
               run: |
