ci: update main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,9 @@ jobs:
             - uses: korandoru/setup-zig@v1
               with:
                   zig-version: master
+            - run: |
+                  which zig
+                  sudo ln -s $(which zig) /usr/local/bin/zig
 
             - name: Change chmod for zig
               run: |
