--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,27 +45,15 @@ jobs:
               uses: ZhongRuoyu/setup-llvm@v0
               with:
                   llvm-version: 19
-            - name: Build Zig compiler
-              run: |
-                  git clone https://github.com/ziglang/zig.git
-                  cd zig && mkdir build && cd build
-                  cmake .. -DCMAKE_BUILD_TYPE=Release
-                  make -j$(nproc)
-                  sudo make install
-
-            - name: Verify Build
-              run: |
-                  ./zig/build/zig version
-                  sudo ln -s ./zig/build/zig /usr/local/bin/zig
             # - uses: korandoru/setup-zig@v1
             #   with:
             #       zig-version: master
-            # - uses: mlugg/setup-zig@v1
-            #   with:
-            #       version: 0.13.0
-            # - run: |
-            #       which zig
-            #       sudo ln -s $(which zig) /usr/local/bin/zig
+            - uses: mlugg/setup-zig@v1
+              with:
+                  version: master
+            - run: |
+                  which zig
+                  sudo ln -s $(which zig) /usr/local/bin/zig
 
             - name: Change chmod for zig
               run: |
