--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,8 +142,15 @@ jobs:
                   actions-cache-folder: "build/.xmake-cache"
                   actions-cache-key: "xmake-actions-cache"
             - name: Build
+              if: ${{ matrix.target == 'x86_64-linux-gnu' }}
               run: |
-                  xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y ${{ matrix.target  }} == 'aarch64-linux-gnu' ? "-a arm64" : ""
+                  xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y
+                  echo "Clean build done.. next building..."
+                  xmake build -v -D
+            - name: Build
+              if: ${{ matrix.target == 'aarch64-linux-gnu' }}
+              run: |
+                  xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y
                   echo "Clean build done.. next building..."
                   xmake build -v -D
             - name: Stripping
