--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,14 @@ on:
 
 jobs:
     make-release:
-        runs-on: ubuntu-latest
         strategy:
             matrix:
-                target:
-                    # - x86_64-linux-gnu
-                    - aarch64-linux-gnu
-                    # - x86_64-windows-gnu
+                # os: [ubuntu-latest, self-hosted] # self-hosted는 ARM64용으로 설정
+                os: [self-hosted] # self-hosted는 ARM64용으로 설정
+                # arch: [x86_64-linux-gnu, aarch64-linux-gnu]
+                arch: [aarch64-linux-gnu]
+        runs-on: ${{ matrix.os }}
+
         permissions:
             contents: write
             packages: write
@@ -39,22 +40,16 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Install dependencies
-              if: ${{ matrix.target == 'x86_64-linux-gnu' }}
               run: |
+                  echo "Building for ${{ matrix.arch }} on ${{ matrix.os }}"
                   sudo apt-get update
-                  sudo apt-get install -y nim build-essential ccache
-
-            - name: Install dependencies
-              if: ${{ matrix.target == 'aarch64-linux-gnu' }}
-              run: |
-                  sudo apt-get update
-                  sudo apt-get install -y nim build-essential gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc-dev-arm64-cross ccache wget
-                  wget https://ports.ubuntu.com/pool/main/n/ncurses/libncurses-dev_6.5-2_arm64.deb
-                  wget https://ports.ubuntu.com/pool/main/n/ncurses/libncurses6_6.5-2_arm64.deb
-                  wget https://ports.ubuntu.com/pool/main/n/ncurses/libncursesw6_6.5-2_arm64.deb
-                  wget https://ports.ubuntu.com/pool/main/n/ncurses/libtinfo6_6.5-2_arm64.deb
-                  wget https://ports.ubuntu.com/pool/main/n/ncurses/ncurses-bin_6.5-2_arm64.deb
-                  sudo dpkg -i libncurses-dev_6.5-2_arm64.deb libncurses6_6.5-2_arm64.deb libncursesw6_6.5-2_arm64.deb libtinfo6_6.5-2_arm64.deb ncurses-bin_6.5-2_arm64.deb
+                  if [ "${{ matrix.arch }}" == "aarch64-linux-gnu" ]; then
+                    echo "Setting up for aarch64-linux-gnu";
+                    sudo apt-get install -y nim build-essential gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libc-dev-arm64-cross ccache;
+                  else
+                    echo "Setting up for x86_64-linux-gnu";
+                    sudo apt-get install -y nim build-essential ccache;
+                  fi
 
             - name: Setup LLVM
               uses: ZhongRuoyu/setup-llvm@v0
@@ -74,9 +69,9 @@ jobs:
             - name: Create Bash Script
               run: |
                   echo '#!/bin/bash' > /home/runner/work/RE-UE4SS/RE-UE4SS/tools/zig/zig-c++
-                  echo "exec zig c++ -target ${{ matrix.target }} \"\$@\"" >> /home/runner/work/RE-UE4SS/RE-UE4SS/tools/zig/zig-c++
+                  echo "exec zig c++ -target ${{ matrix.arch }} \"\$@\"" >> /home/runner/work/RE-UE4SS/RE-UE4SS/tools/zig/zig-c++
                   echo '#!/bin/bash' > /home/runner/work/RE-UE4SS/RE-UE4SS/tools/zig/zig-cc
-                  echo "exec zig cc -target ${{ matrix.target }} \"\$@\"" >> /home/runner/work/RE-UE4SS/RE-UE4SS/tools/zig/zig-cc
+                  echo "exec zig cc -target ${{ matrix.arch }} \"\$@\"" >> /home/runner/work/RE-UE4SS/RE-UE4SS/tools/zig/zig-cc
                   echo '#!/bin/bash' > /home/runner/work/RE-UE4SS/RE-UE4SS/tools/zig/zig-ar
                   echo "exec zig ar \"\$@\"" >> /home/runner/work/RE-UE4SS/RE-UE4SS/tools/zig/zig-ar
 
@@ -147,18 +142,17 @@ jobs:
                   build-cache-path: "build/.build_cache"
                   actions-cache-folder: "build/.xmake-cache"
                   actions-cache-key: "xmake-actions-cache"
+
             - name: Build
-              if: ${{ matrix.target == 'x86_64-linux-gnu' }}
               run: |
-                  xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y
+                  if [ "${{ matrix.arch }}" == "aarch64-linux-gnu" ]; then
+                    xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y -a arm64
+                  else
+                    xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y
+                  fi
                   echo "Clean build done.. next building..."
                   xmake build -v -D
-            - name: Build
-              if: ${{ matrix.target == 'aarch64-linux-gnu' }}
-              run: |
-                  xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y -a arm64
-                  echo "Clean build done.. next building..."
-                  xmake build -v -D
+
             - name: Stripping
               run: |
                   mkdir prepackage
@@ -175,9 +169,9 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
-                  tag_name: UE4SS-${{ matrix.target }}
-                  release_name: UE4SS-${{ matrix.target }}
-                  body: "Build from ${{ matrix.target }}"
+                  tag_name: UE4SS-${{ matrix.arch }}
+                  release_name: UE4SS-${{ matrix.arch }}
+                  body: "Build from ${{ matrix.arch }}"
                   draft: false
                   prerelease: false
 
