--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         strategy:
             matrix:
                 # os: [ubuntu-latest, self-hosted] # self-hosted는 ARM64용으로 설정
-                os: [ubuntu-latest] # self-hosted는 ARM64용으로 설정
+                os: [self-hosted] # self-hosted는 ARM64용으로 설정
                 # arch: [x86_64-linux-gnu, aarch64-linux-gnu]
                 arch: [aarch64-linux-gnu]
         runs-on: ${{ matrix.os }}
@@ -146,7 +146,7 @@ jobs:
             - name: Build
               run: |
                   if [ "${{ matrix.arch }}" == "aarch64-linux-gnu" ]; then
-                    xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=gcc-aarch64-linux-gnu --ccache=y --policies=build.ccache:y -a arm64
+                    xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y -a arm64
                   else
                     xmake f -y --ue4ssUI=TUI --ue4ssInput=y --ue4ssIsBeta=y --zig=y -m "Game__Shipping__Linux" -vD --clean --toolchain=zigcross --ccache=y --policies=build.ccache:y
                   fi
