ci: update main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,9 @@ jobs:
             # with sigstore/fulcio when running outside of PRs.
             id-token: write
         steps:
+            - uses: eviden-actions/clean-self-hosted-runner@v1
+              if: ${{ matrix.os == 'self-hosted' }}
+
             - name: Checkout repository
               uses: actions/checkout@v4
 
