--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,6 +128,7 @@ jobs:
               uses: mozilla-actions/sccache-action@v0.0.7
 
             - name: Set up environment variables for sccache
+              if: ${{ matrix.os != 'self-hosted' }}
               run: |
                   echo "SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV
                   echo "RUSTC_WRAPPER=$(which sccache)" >> $GITHUB_ENV
